--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react-icons": "^3.0.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-icons": "^3.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
